Bug 1149923 - Let 2D mask effect can check whether to use IntermediateSurface or not in its own logic. r=roc